--- a/package.json
+++ b/package.json
@@ -15,16 +15,15 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@vuepress/plugin-back-to-top": "^1.6.0",
-    "@vuepress/plugin-medium-zoom": "^1.6.0",
-    "vuepress": "^1.6.0"
-  },
-  "dependencies": {
+    "@vuepress/plugin-back-to-top": "^1.8.0",
+    "@vuepress/plugin-medium-zoom": "^1.8.0",
+    "node-sass": "^5.0.0",
+    "vuepress": "^1.8.0",
     "bootstrap": "^4.5.2",
-    "sass-loader": "^10.0.3",
+    "sass-loader": "^10.1.0",
     "semantic-release": "^17.1.2",
-    "vdf-2": "npm:@asigloo/vue-dynamic-forms@latest",
-    "vdf-3": "npm:@asigloo/vue-dynamic-forms@next",
+    "vdf-2": "npm:@asigloo/vue-dynamic-forms@2.0.1",
+    "vdf-3": "npm:@asigloo/vue-dynamic-forms",
     "vue-select": "^3.10.8"
   }
 }
